[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-scheduler"
version = "1.0.0"
description = "Free social media scheduler CLI - 5 posts/week free"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["social-media", "scheduler", "twitter", "linkedin", "instagram", "automation"]
authors = [
    { name = "OpenClaw", email = "noreply@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
]
dependencies = [
    "playwright>=1.40.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "python-dateutil>=2.8.0",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
social-scheduler = "social_scheduler.cli:main"
sched = "social_scheduler.cli:main"

[project.urls]
Homepage = "https://github.com/entrebear/social-scheduler"
Documentation = "https://github.com/entrebear/social-scheduler#readme"
"Bug Reports" = "https://github.com/entrebear/social-scheduler/issues"
"Source" = "https://github.com/entrebear/social-scheduler"
"Sponsor" = "https://github.com/sponsors/entrebear"
"Buy Me a Coffee" = "https://www.buymeacoffee.com/entrebear"
"Premium Upgrade" = "https://buy.stripe.com/example"

[tool.hatch.build.targets.wheel]
packages = ["src/social_scheduler"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
